fixed images in digital effects and compdotplay

--- a/ComputerDotPlay.html
+++ b/ComputerDotPlay.html
@@ -29,11 +29,11 @@
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='SuperCollider%20Sessions'>SuperCollider Sessions</a></h3>
 <ul>
-<li><a href="./ComputerDotPlay/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./ComputerDotPlay/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./ComputerDotPlay/Practicals/Digital Synthesis.html">Digital Synthesis</a><li><a href="./ComputerDotPlay/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./ComputerDotPlay/Practicals/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./ComputerDotPlay/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./ComputerDotPlay/Practicals/Interfacing.html">Interfacing</a><li><a href="./ComputerDotPlay/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./ComputerDotPlay/Practicals/Organising your Code.html">Organising your Code</a></ul>
+<li><a href="./ComputerDotPlay/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./ComputerDotPlay/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./ComputerDotPlay/Resources/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./ComputerDotPlay/Practicals/Digital Synthesis.html">Digital Synthesis</a><li><a href="./ComputerDotPlay/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./ComputerDotPlay/Practicals/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./ComputerDotPlay/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./ComputerDotPlay/Practicals/Interfacing.html">Interfacing</a><li><a href="./ComputerDotPlay/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./ComputerDotPlay/Practicals/Organising your Code.html">Organising your Code</a></ul>
 
 <p><h3><a class='anchor' name='SuperCollider%20Resources'>SuperCollider Resources</a></h3>
 <ul>
-<li><a href="./ComputerDotPlay/Resources/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./ComputerDotPlay/Resources/Digital Effects.html">Digital Effects</a><li><a href="./ComputerDotPlay/Resources/Buffer Tricks.html">Buffer Tricks</a></ul>
+<li><a href="./ComputerDotPlay/Resources/Digital Effects.html">Digital Effects</a><li><a href="./ComputerDotPlay/Resources/Buffer Tricks.html">Buffer Tricks</a></ul>
 
 <p><h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
 <ul>
